bad/return_class_down_in_func_returning_class.example_compiler_output
ERROR
[1mbad/return_class_down_in_func_returning_class.lat:4:19: [1;31merror: [0;1mreturned value of type `X` is not convertible to return type `Y`[m
Y test() { return new X; }
                  [1;32m^[m
